removed unnecessary info

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
               </div>
             </div>
           </div>
-          <div class="project-card">
+          <!-- <div class="project-card">
             <div class="project-image">
               <i class="fas fa-tasks"></i>
             </div>
@@ -726,7 +726,7 @@
                 <span class="tag">JWT</span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="project-card">
             <div class="project-image">
               <i class="fas fa-blog"></i>
@@ -880,7 +880,7 @@
         // Specify the path to the CV file
         const cvFilePath = "Nishith-Shrestha[2025-06-10].pdf"; // Change this to your actual CV file name
         // Create a link element
-        
+
         const link = document.createElement("a");
         link.href = cvFilePath;
         link.download = cvFilePath; // Set the desired file name for download
